--- a/views/landing_page.erb
+++ b/views/landing_page.erb
@@ -18,7 +18,7 @@ table, th, td {
      </tr>
    </table>
    <%= @result1 if (@bm.url_list.count > 0) %>
-    <%= @bm.htlist %> </ol>
+    <%= @bm.dbfetch %> </ol>
     <br>
     <table>
       <tr>
