--- a/views/landing_page.erb
+++ b/views/landing_page.erb
@@ -14,7 +14,7 @@ table, th, tr {
    <table width="50%">
      <tr>
        <td width="70%"><textarea name="urlitem" row="1" cols="100"></textarea></td>
-       <td width="15%"><input type="text" name="title" /></td>
+       <td width="15%"><input type="text" name="title" value="No Title"/></td>
        <td width="15%"><input type="submit" value="Save" name="submit" /></td>
      </tr>
       <tr>
@@ -23,13 +23,14 @@ table, th, tr {
         <td><input type="submit" value="Delete" name="submit"></td>
       </tr>
     </table>
-      </form>
+    </form>
+
     <%= @result1 if (@bm.htlist.count > 0) %>
     <%= @result %>
      <ul>
        <% @bookmarks.each do |bookmark| p bookmark%>
        <li>
-         <b># </b><%= bookmark[:ID]%>&nbsp;<a href=<%= bookmark[:URL] %> > <%=bookmark[:TITLE]%> </a>
+         <b># </b><%= bookmark[:ID]%>&nbsp;<a href="<%=bookmark[:URL]%>" target="_blank"> <%=bookmark[:TITLE]%> </a>
        </li>
       <% end %>
     </ul>
